{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 56,
  "lineage": "ac534d72-3ebe-60ad-672b-857f04169d95",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_GW_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f24fbf72ddef9ae7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-27-224.compute-1.amazonaws.com",
            "public_ip": "23.22.27.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SRE_NAT_GW_EIP",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jumpbox_SRE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:613885134324:instance/i-079b2aee1106f7df6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079b2aee1106f7df6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JOAS",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06039cc1772194727"
              }
            ],
            "primary_network_interface_id": "eni-06039cc1772194727",
            "private_dns": "ip-10-0-0-19.pericogallochivo.lab",
            "private_ip": "10.0.0.19",
            "public_ip": "3.84.135.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb5e4f17b2001420",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036b0ec90cd03e935",
            "tags": {
              "Name": "Jumpbox_SRE",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0346fa628e090d826"
            ]
          },
          "dependencies": [
            "aws_key_pair.TheGoodStuff",
            "aws_network_interface.Jumpbox_SRE",
            "aws_security_group.Jumpbox_SG",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SRE_DC01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02642c139a9dfb378",
            "arn": "arn:aws:ec2:us-east-1:613885134324:instance/i-0658d253fb9f3f493",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0658d253fb9f3f493",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JOAS",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cdcc2ccaee1524e8"
              }
            ],
            "password_data": "kRdF0zbC1PdcMb4vdEzqYN/gq7O7pa1/GQM/1cfrYzJ866kNlqKcN/kH/BlLedxtDAnFpLwBl3Zz2iSEhYecZwBZjX7/Mfn8Rat9Z1bbSQ6PSiK35IcCmXtHF8xkKJ3OJF/+HrmyhsV55dlOthQOZ2i+a71ZI00v84Fy8XV70xufS8ITwFlRTpA5ArITpRxyEEjOf/fscEH3cD2WAptaG0pbDT0sJyouGI/kTfhppIonafCUWp+fiUaJewwNGuzSlkuRtC8vixVt/f1gZPP1PihjIBYAOxwmZ5u+NZIuxdECyHtx02uxJZ+RCsMVFwwge9uJVkSlmj3mZLZ9FkYBEg==",
            "primary_network_interface_id": "eni-0cdcc2ccaee1524e8",
            "private_dns": "ip-10-0-0-37.pericogallochivo.lab",
            "private_ip": "10.0.0.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033437dcce2fda44f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05caf15f0e5f903a9",
            "tags": {
              "Name": "SRE-DC01",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cfcf9d175827b9a9"
            ]
          },
          "dependencies": [
            "aws_key_pair.TheGoodStuff",
            "aws_network_interface.SRE_DC01",
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_subnet.Private_SRE_Subnet_01",
            "aws_vpc.SRE_VPC",
            "data.template_file.initial_script1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SRE_DC02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02642c139a9dfb378",
            "arn": "arn:aws:ec2:us-east-1:613885134324:instance/i-0d146be1e5c022fe8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0d146be1e5c022fe8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JOAS",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0d8263a9425741618"
              }
            ],
            "password_data": "fpSpMaKQ7DQY+twe1vbUCn5lwQgAHKU/B/A2/WL/jhooKiBVDU+m8j6EWYGEOV2uIVKw1z4gfwvC1SCc0Mz//tHMw2nb3QnfsVV7BcPfRz7vLno+yCJ/UmIlTkwXW6h/WcrX7awVDNR7vp6Usj4QQzXWuuPhDZj7/wVCXqKqNhINJ77otBvZnYOStuso7Lx6GcEKLHwOTPTOVLjldjoWqvs6jejZKSGiti1bHm70Qh+vlXEqFIy26pgCOLDUSTX+TrC2xqPXL6U2p1cgv5s3YFwFnYLvlHnbTTK55tkZ4e9kBISuk6SMGP09CfPMeOB/JtjO1ZdmxtoyuDfhggBXAA==",
            "primary_network_interface_id": "eni-0d8263a9425741618",
            "private_dns": "ip-10-0-0-71.pericogallochivo.lab",
            "private_ip": "10.0.0.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048fe62300226874f",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021e92b05a331ef5e",
            "tags": {
              "Name": "SRE-DC02",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cfcf9d175827b9a9"
            ]
          },
          "dependencies": [
            "aws_key_pair.TheGoodStuff",
            "aws_network_interface.SRE_DC02",
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_subnet.Private_SRE_Subnet_02",
            "aws_vpc.SRE_VPC",
            "data.template_file.initial_script2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SRE_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:internet-gateway/igw-05026bf5185326487",
            "id": "igw-05026bf5185326487",
            "owner_id": "613885134324",
            "tags": {
              "Name": "SRE_IGW",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f3575c667f1434b",
            "original_route_table_id": "rtb-02faa0c36f8745f09",
            "route_table_id": "rtb-060273cac06df4568",
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_nat_gateway.SRE_NAT_GW",
            "aws_route_table.Main_Route_Table",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "SRE_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f24fbf72ddef9ae7",
            "id": "nat-0b53b6bf00dec6451",
            "network_interface_id": "eni-04c71a73a0ab64454",
            "private_ip": "10.0.0.10",
            "public_ip": "23.22.27.224",
            "subnet_id": "subnet-036b0ec90cd03e935",
            "tags": {
              "Name": "SRE_NAT_GW",
              "Owner": "JOAS-1",
              "Team": "SRE"
            }
          },
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Jumpbox_SRE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06039cc1772194727",
            "ipv6_address_count": 0,
            "mac_address": "0a:74:69:f2:28:25",
            "private_ip": "10.0.0.19",
            "private_ips": [
              "10.0.0.19"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0346fa628e090d826"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036b0ec90cd03e935",
            "tags": {
              "Name": "Jumpbox_SRE_NIC",
              "Owner": "JOAS-1",
              "Team": "SRE"
            }
          },
          "dependencies": [
            "aws_security_group.Jumpbox_SG",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "SRE_DC01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0cdcc2ccaee1524e8",
            "ipv6_address_count": 0,
            "mac_address": "16:b5:d0:a9:af:d9",
            "private_ip": "10.0.0.37",
            "private_ips": [
              "10.0.0.37"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cfcf9d175827b9a9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05caf15f0e5f903a9",
            "tags": {
              "Name": "SRE_DC01_NIC",
              "Owner": "JOAS-1",
              "Team": "SRE"
            }
          },
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_subnet.Private_SRE_Subnet_01",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "SRE_DC02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0d8263a9425741618",
            "ipv6_address_count": 0,
            "mac_address": "06:6d:20:da:cd:c7",
            "private_ip": "10.0.0.71",
            "private_ips": [
              "10.0.0.71"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cfcf9d175827b9a9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021e92b05a331ef5e",
            "tags": {
              "Name": "SRE_DC02_NIC",
              "Owner": "JOAS-1",
              "Team": "SRE"
            }
          },
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_subnet.Private_SRE_Subnet_02",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Main_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-060273cac06df4568",
            "owner_id": "613885134324",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b53b6bf00dec6451",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_nat_gateway.SRE_NAT_GW",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f8321ead44120c10",
            "owner_id": "613885134324",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05026bf5185326487",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.SRE_IGW",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d59e8a9ece6fa586",
            "route_table_id": "rtb-0f8321ead44120c10",
            "subnet_id": "subnet-036b0ec90cd03e935"
          },
          "dependencies": [
            "aws_internet_gateway.SRE_IGW",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c649b8250a4e519",
            "route_table_id": "rtb-060273cac06df4568",
            "subnet_id": "subnet-05caf15f0e5f903a9"
          },
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_nat_gateway.SRE_NAT_GW",
            "aws_route_table.Main_Route_Table",
            "aws_subnet.Private_SRE_Subnet_01",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d38b056c02848c8",
            "route_table_id": "rtb-060273cac06df4568",
            "subnet_id": "subnet-021e92b05a331ef5e"
          },
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_nat_gateway.SRE_NAT_GW",
            "aws_route_table.Main_Route_Table",
            "aws_subnet.Private_SRE_Subnet_02",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8f039d8503be1c8",
            "route_table_id": "rtb-060273cac06df4568",
            "subnet_id": "subnet-041f2dd876915e603"
          },
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_nat_gateway.SRE_NAT_GW",
            "aws_route_table.Main_Route_Table",
            "aws_subnet.Private_SRE_Subnet_03",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0998747f40f1bd534",
            "route_table_id": "rtb-060273cac06df4568",
            "subnet_id": "subnet-0f78acc76cd46bc21"
          },
          "dependencies": [
            "aws_eip.NAT_GW_IP",
            "aws_nat_gateway.SRE_NAT_GW",
            "aws_route_table.Main_Route_Table",
            "aws_subnet.Private_SRE_Subnet_04",
            "aws_subnet.Public_SRE_Subnet",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DC_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:security-group/sg-0cfcf9d175827b9a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfcf9d175827b9a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0346fa628e090d826"
                ],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "DC_SG",
            "name_prefix": "",
            "owner_id": "613885134324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DC_SG",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jumpbox_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:security-group/sg-0346fa628e090d826",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0346fa628e090d826",
            "ingress": [
              {
                "cidr_blocks": [
                  "189.186.28.176/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jumpbox_SG",
            "name_prefix": "",
            "owner_id": "613885134324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jumpbox_SG",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ADDSWeb_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "AD DS Web Services SOAP TCP",
            "from_port": 9389,
            "id": "sgrule-2737242618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 9389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DCOM_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RPC, DCOM, EPM, DRSUAPI, NetLogonR, SamR, FRS Windows Server 2003 TCP",
            "from_port": 1025,
            "id": "sgrule-3345908042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DCOM_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RPC, DCOM, EPM Windows Server 2003 TCP",
            "from_port": 1025,
            "id": "sgrule-1664164517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DFSN_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "DFSN, NetLogon, NetBIOS Datagram Service UDP",
            "from_port": 138,
            "id": "sgrule-520405771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 138,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DFSR_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RPC, DFSR (SYSVOL) TCP",
            "from_port": 5722,
            "id": "sgrule-2842174974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 5722,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DHCP_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "DHCP, MADCAP UDP",
            "from_port": 67,
            "id": "sgrule-4169093021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 67,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DNS_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "DNS TCP",
            "from_port": 53,
            "id": "sgrule-4126675944",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DNS_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "DNS UDP",
            "from_port": 53,
            "id": "sgrule-1369944071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EPM_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RPC, DCOM, EPM, DRSUAPI, NetLogonR, SamR, FRS Windows Server 2008+ TCP",
            "from_port": 49152,
            "id": "sgrule-1724933819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EPM_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RPC, DCOM, EPM Windows Server 2008+ TCP",
            "from_port": 49152,
            "id": "sgrule-3264202068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "KerberosPassword_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kerberos change/set password TCP",
            "from_port": 464,
            "id": "sgrule-3609545030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 464,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "KerberosPassword_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kerberos change/set password UDP",
            "from_port": 464,
            "id": "sgrule-1937435305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 464,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Kerberos_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kerberos TCP",
            "from_port": 88,
            "id": "sgrule-474689265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 88,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Kerberos_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kerberos UDP",
            "from_port": 88,
            "id": "sgrule-3088354590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 88,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "LDAP_GC_SSL_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "LDAP GC SSL",
            "from_port": 3269,
            "id": "sgrule-580718144",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 3269,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "LDAP_GC_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "LDAP GC",
            "from_port": 3268,
            "id": "sgrule-1610238580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 3268,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "LDAP_SSL_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "LDAP SSL",
            "from_port": 636,
            "id": "sgrule-3928467965",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 636,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "LDAP_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "LDAP TCP",
            "from_port": 389,
            "id": "sgrule-2432396702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "LDAP_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "LDAP UDP",
            "from_port": 389,
            "id": "sgrule-883215985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "MADCAP_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "DHCP, MADCAP UDP",
            "from_port": 2535,
            "id": "sgrule-803881582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 2535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NetLogon_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "DFSN, NetBIOS Session Service, NetLogon TCP",
            "from_port": 139,
            "id": "sgrule-2171545142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 139,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NetLogon_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NetLogon, NetBIOS Name Resolution UDP",
            "from_port": 137,
            "id": "sgrule-3009029092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 137,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "RPC_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "RPC, EPM TCP",
            "from_port": 135,
            "id": "sgrule-1668091311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 135,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SMB_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SMB,CIFS,SMB2, DFSN, LSARPC, NbtSS, NetLogonR, SamR, SrvSvc TCP",
            "from_port": 445,
            "id": "sgrule-1021182184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 445,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SMB_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SMB,CIFS,SMB2, DFSN, LSARPC, NbtSS, NetLogonR, SamR, SrvSvc UDP",
            "from_port": 445,
            "id": "sgrule-2558632711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 445,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SMTP_TCP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SMTP TCP",
            "from_port": 25,
            "id": "sgrule-2389721387",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 25,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "WindowsTime_UDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Windows Time UDP",
            "from_port": 123,
            "id": "sgrule-862764818",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0cfcf9d175827b9a9",
            "self": false,
            "source_security_group_id": "sg-0cfcf9d175827b9a9",
            "to_port": 123,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.DC_SG",
            "aws_security_group.Jumpbox_SG",
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SRE_Subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:subnet/subnet-05caf15f0e5f903a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.32/27",
            "id": "subnet-05caf15f0e5f903a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613885134324",
            "tags": {
              "Name": "Private_SRE_Subnet_01",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SRE_Subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:subnet/subnet-021e92b05a331ef5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.64/27",
            "id": "subnet-021e92b05a331ef5e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613885134324",
            "tags": {
              "Name": "Private_SRE_Subnet_02",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SRE_Subnet_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:subnet/subnet-041f2dd876915e603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.96/27",
            "id": "subnet-041f2dd876915e603",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613885134324",
            "tags": {
              "Name": "Private_SRE_Subnet_03",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SRE_Subnet_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:subnet/subnet-0f78acc76cd46bc21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/27",
            "id": "subnet-0f78acc76cd46bc21",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613885134324",
            "tags": {
              "Name": "Private_SRE_Subnet_04",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SRE_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:subnet/subnet-036b0ec90cd03e935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-036b0ec90cd03e935",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613885134324",
            "tags": {
              "Name": "Public_SRE_Subnet",
              "Owner": "JOAS-1",
              "Team": "SRE"
            },
            "vpc_id": "vpc-0d488122ae65e4951"
          },
          "dependencies": [
            "aws_vpc.SRE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SRE_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613885134324:vpc/vpc-0d488122ae65e4951",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-00005d27d578a94d8",
            "default_route_table_id": "rtb-02faa0c36f8745f09",
            "default_security_group_id": "sg-00c19b6e25b3f11af",
            "dhcp_options_id": "dopt-0ea6a1b908d021fcb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d488122ae65e4951",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02faa0c36f8745f09",
            "owner_id": "613885134324",
            "tags": {
              "Name": "SRE_VPC",
              "Owner": "JOAS-1",
              "Team": "SRE"
            }
          }
        }
      ]
    }
  ]
}